--- a/group.html
+++ b/group.html
@@ -108,18 +108,18 @@
                             <div class="post-text-part">
                                 <article>
                                     <p>
-                                        Тіньове клонування?)
+                                        Новий РБ Чорний дракон!
                                     </p>
                                 </article>
                             </div>
                             <div class="post-files-part">
-                                <img src="img/user-post-1.jpg" alt="ArcheAge screenshot">
+                                <img src="img/dark-dragon.jpg" alt="ArcheAge screenshot">
                             </div>
                             <div class="post-managment-part">
                                 <i class="far fa-edit"></i>
                                 <i class="far fa-trash-alt"></i>
                                 <div class="likes-post-part">
-                                    <h3>103</h3>
+                                    <h3>1032</h3>
                                     <i class="far fa-heart"></i>
                                 </div>
                             </div>
@@ -127,11 +127,11 @@
                                 <div class="comment-creator-part">
                                     <div class="comment-content">
                                         <img src="img/user-2-avatar.png" alt="Comment creator avatar">
-                                        <p class="comment-creator">No Name</p>
-                                        <p class="comment-creation-time">08:05:2019 23:05</p>
+                                        <p class="comment-creator">Name3 Surname3</p>
+                                        <p class="comment-creation-time">12.05.2019 13:22</p>
                                         <article>
                                             <p>
-                                                Мої боти ^^
+                                                Чекаємо топ лутик ; )
                                             </p>
                                         </article>
                                     </div>
@@ -139,7 +139,7 @@
                                         <i class="far fa-edit"></i>
                                         <i class="far fa-trash-alt"></i>
                                         <div class="likes-comment-part">
-                                            <h3>13</h3>
+                                            <h3>45</h3>
                                             <i class="far fa-heart"></i>
                                         </div>
                                     </div>
@@ -149,6 +149,10 @@
                                 <div class="form-group">
                                     <label for="post-text-input">Write comment</label>
                                     <textarea class="form-control" id="post-text-input" rows="4"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="post-file-input">Choose file</label>
+                                    <input type="file" id="post-file-input" class="form-control-file" multiple>
                                 </div>
                                 <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Send comment!</button>
                             </form>
