--- a/profile.html
+++ b/profile.html
@@ -77,7 +77,7 @@
                 <div class="about-user">
                     <article>
                         <p>
-                            Hi! I'm Haise. I like fast dynamic games and backstabs ; )
+                            Hi! I'm Haise. I like fast dynamic gaming and backstabs ; )
                         </p>
                     </article>
                 </div>
@@ -180,6 +180,10 @@
                                 <div class="form-group">
                                     <label for="post-text-input">Write comment</label>
                                     <textarea class="form-control" id="post-text-input" rows="4"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="post-file-input">Choose file</label>
+                                    <input type="file" id="post-file-input" class="form-control-file" multiple>
                                 </div>
                                 <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Send comment!</button>
                             </form>
